# MCTS-ConnectFour

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENCE.md  README.md  conan-profile.txt  conanfile.py  conanfile.txt
.github/workflows/: build_and_test.yml  cmake.yml
docs/: Doxyfile.out
docs/doxygen/html/: _game_a_i_8h_source.html  _game_state_8h_source.html  _tree_8h_source.html  annotated.html  class_game_a_i-members.html  class_game_a_i.html  class_game_a_i_1_1_value-members.html  class_game_a_i_1_1_value.html  class_game_state-members.html  class_game_state.html  class_tree-members.html  class_tree.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  struct_node-members.html  struct_node.html  struct_position-members.html  struct_position.html
docs/doxygen/html/search/: all_2.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js
gui/: QGameStateModel.cpp  QWinnerDialog.h
include/: Delegate.h  GameAI.h  GameAI_Thread.h  GameKI.h  GamePanel.h  GameState.h  QGameStateModel.h  Tree.h  WinnerDialog.h
include/ai/: GameAI.h  Tree.h
include/data/: GameState.h
include/ui/: QGameAI_Thread.h  QGameStateModel.h
includes/: GameKI.h  GamePanel.h  Player.h  Tree.h
qt/: QGameAI_Thread.cpp  QGameAI_Thread.h  QGameStateModel.cpp  QGameStateModel.h  QWinnerDialog.h
resources/: UML_class_dia.dia  circle.kra  cross.kra
src/: CMakeLists.txt  Delegate.cpp  GameAI.cpp  GameAI_Thread.cpp  GameKI.cc  GameKI.cpp  GamePanel.cc  GamePanel.cpp  GameState.cpp  QGameStateModel.cpp  Tree.cc  Tree.cpp  main.cc  main.cpp
src/ai/: GameAI.cpp
src/data/: GameState.cpp
src/ui/: QGameAI_Thread.cpp  QGameStateModel.cpp
tests/: CMakeLists.txt  MCTS_Tests.cpp  TestGameAI.cpp  TestGameState.cpp  TreeTest.cc  TreeTest.cpp  main_tests.cpp  results.md
